--- a/index.html
+++ b/index.html
@@ -1,36 +1,139 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <title>Arjun's Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <div class="bgimage">
+            <div class="menu">
+                <div class="logo"  id="intro">
+                    <a href="#intro"><img src="logo.png"></a>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <a href="#intro"><li>HOME</li></a>
+                        <a href="#about"><li>ABOUT</li></a>
+                        <a href="#project"><li>PROJECTS</li></a>
+                        <a href="#team"><li>GALLERY</li></a>
+                        <a href="#contact"><li>CONTACT</li></a>
+                    </ul>
+                </div>
+            </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Arjun's Portfolio</title>
+            <div class="intro">
+                <h1>ARJUN KRISHNA</h1>
+                <h3>Designer * Blogger * Artist</h3>
+                <p>Someone who's keen on learning something new everyday</p>
+                <div class="introbtn">
+                    <a href="#about"><button>READ MORE</button></a>
+                </div>
+            </div>
+        </div>
 
-    <style>
-        * {
-            margin: 10px 80px;
-            text-align: center;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+<!--__________________________________________________________________________________________________________________________________-->
 
-        }
-    </style>
-</head>
+        <div class="container"  id="about">
+            <div class="text">
+                <h3>ABOUT US</h3>
+            </div>
+            <div class="about-container">
+                <div class="about">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        <br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    </p>
+                </div>
+                <div class="about">
+                    <img src="profile-pic.jpg">
+                </div>
+            </div>
+        </div>
 
-<body>
-    <h3>Hello, Its me,</h3>
-    <h1>Arjun Krishna</h1>
-    <img src="profile-pic.jpg" alt="My profile-pic" height="300px" width="auto">
-    <h3>ABOUT ME</h3>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-        including versions of Lorem Ipsum.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3FvSLA-Kvvs" frameborder="0" allow="accelerometer; 
-        autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</body>
+<!--__________________________________________________________________________________________________________________________________-->
 
+        <div class="container" id="project">
+            <div class="text">
+                <h3>PROJECTS</h3>
+            </div>
+            <div class="project_text">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                </p>
+            </div>
+            <div class="project-container">
+                <div class="project">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSVGviqV4k0dTiVpkDOekUsAOhb1yiB0-FTICf1oiWg6z7Al_XM&usqp=CAU">
+                    <p>My Portfolio</p>
+                </div>
+                <div class="project">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQwvkA9OddCIuyd7k13SObbjjZZkAKKcjll6ALbEY3f65Ml8VMz&usqp=CAU">
+                    <p>Railway Reservation System</p>
+                </div>
+                <div class="project">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSCTksU4oGiFywo4DO3Ia0g_3RNBAeD01FU5ovoMkjm4T90wXNb&usqp=CAU">
+                    <p>IEDC Profile</p>
+                </div>
+                <div class="project">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSVGviqV4k0dTiVpkDOekUsAOhb1yiB0-FTICf1oiWg6z7Al_XM&usqp=CAU">
+                    <p>Kutty Coders Portfolio</p>
+                </div>
+            </div>
+        </div>
+
+<!--__________________________________________________________________________________________________________________________________-->
+
+        <div class="container" id="team">
+            <div class="text">
+                <h3>GALLERY</h3>
+            </div>
+            <div class="team-container">
+                <div class="team1">
+                    <img src="01.png">
+                    <p>Arjun's Pic 001</p>
+                </div>
+                <div class="team">
+                    <img src="05.jpg">
+                    <p>Arjun's Pic 002</p>
+                </div>
+                <div class="team">
+                    <img src="05.jpg">
+                    <p>Arjun's Pic 003</p>
+                </div>
+                <div class="team">
+                    <img src="05.jpg">
+                    <p>Arjun's Pic 004</p>
+                </div>
+                <div class="team">
+                    <img src="05.jpg">
+                    <p>Arjun's Pic 005</p>
+                </div>
+            </div>
+        </div>
+
+<!--__________________________________________________________________________________________________________________________________-->
+
+        <div class="float" id="contact">
+            <div class="text">
+                <h3>CONTACT US</h3>
+            </div>
+            <div class="contact">
+                <div class="left">
+                    <input type="text" placeholder="Name:">
+                    <input type="text" placeholder="Email:">
+                    <input type="text" placeholder="Mobile:">
+                </div>
+                <div class="right">
+                    <textarea rows="6" cols="" placeholder="Message:"></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="send">
+            <button>SEND</button>
+        </div>
+
+<!--__________________________________________________________________________________________________________________________________-->
+
+
+        <div class="copyright">
+            <p>Copyright 2019 | All rights reserved | Designed by <span>ARJUN KRISHNA</span></p>
+        </div>
+    </body>
 </html>
